--- a/app/views/mine/wines/add_step_one.html.erb
+++ b/app/views/mine/wines/add_step_one.html.erb
@@ -1,7 +1,9 @@
-<h2>添加酒款</h2>
-<div class="wine_register">
-  <div class="content">
-    <div class="wine_add_step1 mb30">第一步：搜索你想上传酒</div>
-    <%= render :partial => "mine/wines/search_wine", :object => @search %>
+<div id="mainspace860" class="addwine">
+  <div class="addwine">
+    <h1 class="main_title">添加藏酒</h1>
+    <div class="step">
+      <div class="step_fir"></div>
+    </div>
+      <%= render :partial => "mine/wines/search_wine", :object => @search %>
   </div>
 </div>
