--- a/app/views/mine/wines/add_step_two.html.erb
+++ b/app/views/mine/wines/add_step_two.html.erb
@@ -1,39 +1,62 @@
-<h2>添加酒款</h2>
-<div class="wine_register">
-  <div id="search_wine">
-    <div class="wine_add_step2 mb30">第二步：选择你想上传得酒</div>
-    <%= render :partial => "mine/wines/search_wine", :object => @search %>
-    <div id="new_wine_register"><div class="float_r">这些都不是？<%= link_to "添加新酒款", new_mine_wine_path %></div><div class="float_l">我们为您查询以下酒款</div></div>
-  </div>
+<div id="mainspace860" class="addwine">
+  <div class="addwine">
+    <h1 class="main_title">添加藏酒</h1>
+    <div class="step">
+      <div class="step_fir"></div>
+    </div>
     <% unless @search.wines.blank? %>
-        <% @search.wines.each do |detail| %>
-          <ul class="wine_list">
-            <li class="wine_photo">
-                <%= wine_cover_tag( detail, :thumb_name => "w_thumb", :width => "50", :height => "63" )%>
+        <%= render :partial => "mine/wines/search_wine", :object => @search %>
+        <div>
+          <div class="float_r">
+            <span class="notice_b">这些都不是您要找的酒？</span>
+            <%=  link_to new_mine_wine_path, :class => "btn_gray" do %>
+                <span>添加酒款</span>
+            <% end %>
+          </div>
+          <p class="notice_b mb20">我们为您搜寻到以下酒款</p>
+          <div class="clear"></div>
+        </div>
 
-            </li>
-            <li>
-              <%= detail.wine.name_zh %><br/>
-              <%=  detail.wine.name_en %><br/>
-              已有年份
-              <div>
-                <% Wines::Detail.where("wine_id = ?", detail.wine_id).select('id, year').each do |wine_detail| %>
-                    <%= link_to wine_detail.show_year, wine_path(wine_detail.id) %>
-                <% end %>
+        <% @search.wines.each do |detail| %>
+            <div class="box">
+              <div class="box_t"></div>
+              <div class="box_main">
+                <div class="wine_img"><%= wine_cover_tag( detail, :thumb_name => "w_thumb", :width => "50", :height => "63" )%></div>
+                <div class="wine_info">
+                  <h2><%= detail.wine.name_zh %></h2>
+                  <h3><%= detail.wine.name_en %></h3>
+                  <p><strong>已有年份：</strong></p>
+                  <p class="year">
+                    <% Wines::Detail.where("wine_id = ?", detail.wine_id).select('id, year').each do |wine_detail| %>
+                        <span><%= link_to wine_detail.show_year, wine_path(wine_detail.id) %></span>
+                    <% end %>
+                  </p>
+                  <p class="mt10">
+                    <%= link_to new_mine_wine_path(:wine_detail_id => detail.id), :class => "btn_gray" do %>
+                        <span>添加新年份</span>
+                    <% end %>
+                  </p>
+                </div>
+                <div class="clear"></div>
               </div>
-              <%= link_to "添加新年份", new_mine_wine_path(:wine_detail_id => detail.id, :class => "button_gray")%>
-            </li>
-          </ul>
+              <div class="box_b"></div>
+            </div>
         <% end %>
     <% else %>
-        <div class="search_none_wine">没有找到相关酒款，您愿意为我们添加吗？</div>
-        <%= link_to "添加酒款", new_mine_wine_path %>
+        <div class="notice mb20">没有找到相关酒款，您愿意帮助我们添加么？</div>
+        <div class="align_c">
+          <%= link_to new_mine_wine_path, :class => "btn_gray_b mr5" do %>
+              <span>我来添加</span>
+          <% end %>
+          <%=  link_to mine_wines_add_path(:step => 1), :class => "btn_gray_b" do %>
+             <span>重新搜索</span>
+          <% end %>
+        </div>
     <% end %>
-
-  <script type="text/javascript" charset="utf-8">
-    $('a#next').click(function(){
-      $("form.edit_search").submit();
-      return false;
-    });
-  </script>
+    
+  </div>
 </div>
+
+
+
+
