--- a/app/assets/stylesheets/v2/application.css.scss
+++ b/app/assets/stylesheets/v2/application.css.scss
@@ -14,5 +14,8 @@
 @import "v2/wine_register";
 @import "v2/wine_profile";
 @import "v2/user_album";
+@import "v2/main2";
+@import "v2/add";
+@import "v2/hp";
 
 
