--- a/app/views/share/_user_fragment.html.erb
+++ b/app/views/share/_user_fragment.html.erb
@@ -53,8 +53,8 @@
 
       </li>
       <li>
-        <%= link_to_icon "add_wine", mine_wines_add_path(:step => 1)  %> <br />
-        <%= link_to "添加红酒", mine_wines_add_path(:step => 1) %>
+        <%= link_to_icon "add_wine", add_mine_wines_path(:step => 1)  %> <br />
+        <%= link_to "添加红酒", add_mine_wines_path(:step => 1) %>
 
       </li>
       <li>
