--- a/app/views/wine_details/show.html.erb
+++ b/app/views/wine_details/show.html.erb
@@ -4,7 +4,6 @@
 <div id="add_to_cellar_form"  style="display: none" >
 
 </div>
-
 <div class="wine_profile">
   <%= render_stickies %>
   <div class="left">
@@ -47,12 +46,12 @@
       <%= render "wine_details/share/comments" %>
     </div>
     <div class="clear"></div>
-
+<!-- 
     <div class="box testing_notes">
-      <%= render "wine_details/testing_notes/testing_note" %>
+      <%#= render "wine_details/testing_notes/testing_note" %>
     </div>
     <div class="clear"></div>
-
+ -->
     <div class="box followers">
       <%= render "wine_details/share/followers" %>
     </div>
@@ -63,10 +62,10 @@
     </div>
     <div class="clear"></div>
 
-    <div class="box events">
-      <%= render "wine_details/share/events" %>
+    <!-- <div class="box events">
+      <%#= render "wine_details/share/events" %>
     </div>
-    <div class="clear"></div>
+    <div class="clear"></div> -->
     <!-- left end -->
   </div>
 
@@ -85,17 +84,18 @@
       <%= render "wine_details/share/score" %>
     </div>
     <div class="clear"></div>
-
+<!--
     <div class="box special_comments">
-      <%= render "wine_details/share/special_comments" %>
+      <%#= render "wine_details/share/special_comments" %>
     </div>
+
     <div class="clear"></div>
 
     <div class="box price">
-      <%= render "wine_details/share/price" %>
+      <%#= render "wine_details/share/price" %>
     </div>
     <div class="clear"></div>
-
+-->
     <div class="box vintage">
       <%= render "wine_details/share/vintage" %>
     </div>
