--- a/app/views/wine_details/share/_followers.html.erb
+++ b/app/views/wine_details/share/_followers.html.erb
@@ -1,10 +1,7 @@
 <h3>
   他们关注
   <span class="font_12">
-    <%= link_to "（共#{@wine_detail.followers_count}人，更多...)",
-                :controller => "wines",
-                :action => "followers",
-                :wine_detail_id => @wine_detail.id %>
+    <%= link_to "（共#{@wine_detail.followers_count}人，更多...)", followers_wine_path(@wine_detail.id) %>
   </span>
 </h3>
 
